--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
   "dependencies": {
     "@openzeppelin/contracts": "^4.3.3",
     "@truffle/hdwallet-provider": "^1.7.0",
+    "dotenv": "^10.0.0",
     "web3": "^1.6.1"
+  },
+  "devDependencies": {
+    "truffle-plugin-verify": "^0.5.18"
   }
 }
